--- a/StoreFront.UI.MVC/Views/Shared/_Layout.cshtml
+++ b/StoreFront.UI.MVC/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container px-4 px-lg-5">
-            <a class="navbar-brand" href="@Url.Action("Index", "Home")">Sim Racing Shop</a>
+            <a class="navbar-brand text-danger" href="@Url.Action("Index", "Home")">Sim Racing Shop</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
@@ -67,7 +67,7 @@
             <div class="container px-4 px-lg-5 my-5">
                 <div class="text-center text-white">
                     <h1 class="display-4 fw-bolder">Shop the best sim racing equipment</h1>
-                    <p class="lead fw-normal text-white-50 mb-0">With Sim Racing Shop</p>
+                    <p class="lead fw-normal text-danger mb-0">With Sim Racing Shop</p>
                 </div>
             </div>
         </header>
