added shoppingcart controller and view

--- a/StoreFront.UI.MVC/Views/Home/Index.cshtml
+++ b/StoreFront.UI.MVC/Views/Home/Index.cshtml
@@ -21,7 +21,7 @@
                     </div>
                     <!-- Product actions-->
                     <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                        <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">View options</a></div>
+                        <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="asp-action="Details" asp-route-id="@item.ProductId"Details">Add to Cart</a></div>
                     </div>
                 </div>
             </div>
@@ -34,21 +34,13 @@
                         <div class="text-center">
                             <!-- Product name-->
                             <h5 class="fw-bolder">Podium BMW M4 GT3 Steering Wheel</h5>
-                            <!-- Product reviews-->
-                            <div class="d-flex justify-content-center small text-warning mb-2">
-                                <div class="bi-star-fill"></div>
-                                <div class="bi-star-fill"></div>
-                                <div class="bi-star-fill"></div>
-                                <div class="bi-star-fill"></div>
-                                <div class="bi-star-fill"></div>
-                            </div>
                             <!-- Product price-->
                             $1499.95
                         </div>
                     </div>
                     <!-- Product actions-->
                     <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                        <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
+                        <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="@Url.Action("Index", "ShoppingCart")">Add to cart</a></div>
                     </div>
                 </div>
             </div>
@@ -67,7 +59,7 @@
                     </div>
                     <!-- Product actions-->
                     <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                        <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
+                        <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="@Url.Action("Index", "ShoppingCart")">Add to cart</a></div>
                     </div>
                 </div>
             </div>
@@ -80,28 +72,18 @@
                         <div class="text-center">
                             <!-- Product name-->
                             <h5 class="fw-bolder">McLaren GT3 V2 Steering Wheel</h5>
-                            <!-- Product reviews-->
-                            <div class="d-flex justify-content-center small text-warning mb-2">
-                                <div class="bi-star-fill"></div>
-                                <div class="bi-star-fill"></div>
-                                <div class="bi-star-fill"></div>
-                                <div class="bi-star-fill"></div>
-                                <div class="bi-star-fill"></div>
-                            </div>
                             <!-- Product price-->
                             $199.95
                         </div>
                     </div>
                     <!-- Product actions-->
                     <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                        <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
+                        <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="@Url.Action("Index", "ShoppingCart")">Add to cart</a></div>
                     </div>
                 </div>
             </div>
             <div class="col mb-5">
                 <div class="card h-100">
-                    <!-- Sale badge-->
-                    <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale</div>
                     <!-- Product image-->
                     <img class="card-img-top" src="images/Fanatec_Logo.jpg" alt="..." />
                     <!-- Product details-->
@@ -116,7 +98,7 @@
                     </div>
                     <!-- Product actions-->
                     <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                        <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
+                        <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="@Url.Action("Index", "ShoppingCart")">Add to cart</a></div>
                     </div>
                 </div>
             </div>
@@ -135,7 +117,7 @@
                     </div>
                     <!-- Product actions-->
                     <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                        <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">View options</a></div>
+                        <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="@Url.Action("Index", "ShoppingCart")">View options</a></div>
                     </div>
                 </div>
             </div>
@@ -148,21 +130,13 @@
                         <div class="text-center">
                             <!-- Product name-->
                             <h5 class="fw-bolder">Clubsport Shifter SQ</h5>
-                            <!-- Product reviews-->
-                            <div class="d-flex justify-content-center small text-warning mb-2">
-                                <div class="bi-star-fill"></div>
-                                <div class="bi-star-fill"></div>
-                                <div class="bi-star-fill"></div>
-                                <div class="bi-star-fill"></div>
-                                <div class="bi-star-fill"></div>
-                            </div>
                             <!-- Product price-->
                             $259.95
                         </div>
                     </div>
                     <!-- Product actions-->
                     <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                        <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
+                        <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="@Url.Action("Index", "ShoppingCart")">Add to cart</a></div>
                     </div>
                 </div>
             </div>
@@ -175,21 +149,13 @@
                         <div class="text-center">
                             <!-- Product name-->
                             <h5 class="fw-bolder">Clubsport Pedals V3</h5>
-                            <!-- Product reviews-->
-                            <div class="d-flex justify-content-center small text-warning mb-2">
-                                <div class="bi-star-fill"></div>
-                                <div class="bi-star-fill"></div>
-                                <div class="bi-star-fill"></div>
-                                <div class="bi-star-fill"></div>
-                                <div class="bi-star-fill"></div>
-                            </div>
                             <!-- Product price-->
                             $399.95
                         </div>
                     </div>
                     <!-- Product actions-->
                     <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                        <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
+                        <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="@Url.Action("Index", "ShoppingCart")">Add to cart</a></div>
                     </div>
                 </div>
             </div>
