--- a/StoreFront.UI.MVC/Views/Shared/_Layout.cshtml
+++ b/StoreFront.UI.MVC/Views/Shared/_Layout.cshtml
@@ -5,15 +5,15 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Shop Homepage - Start Bootstrap Template</title>
+        <title>Sim Racing Gear</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Bootstrap icons-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="css/styles.css" rel="stylesheet" />
+        <link href="~/css/styles.css" rel="stylesheet" />
         <!-- Paged List -->
-        <link href="~/css/PagedList.css" rel="stylesheet" />    
+        <link href="~/css/PagedList.css" rel="stylesheet" />
     </head>
     <body>
         <!-- Navigation-->
@@ -25,41 +25,41 @@
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="@Url.Action("Index", "Home")">Home</a></li>
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="@Url.Action("Index", "Products")">Shop</a></li>
+                    @if(User.IsInRole("Admin")) 
+                    {
+
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Admin</a>
+                            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+                                <li class="nav-item"><a class="nav-link active" aria-current="page" href="@Url.Action("ListUsers", "Administration")">Users</a></li>
+                                <li class="nav-item"><a class="nav-link active" aria-current="page" href="@Url.Action("ListRoles", "Administration")">Roles</a></li>
+                                    <li class="nav-item">
+                                        <a class="nav-link active" aria-current="page" href="@Url.Action("Index", "Manufacturers")">Manufacturers</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link active" aria-current="page" href="@Url.Action("Index", "Categories")">Categories</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link active" aria-current="page" href="@Url.Action("Index", "OrderProducts")">Products in Orders</a>
+                                    </li>
+                            </ul>
+                        </li>
+                    }
+                    </ul>
+                    <ul class="navbar-nav ms-auto ms-md-0 me-3 me-lg-4">
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="bi bi-person-circle"></i></a>
+                            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+                                <partial name="_LoginPartial" />
+                            </ul>
+                        </li>
                     </ul>
 
-                @if (User.IsInRole("Admin"))
-                {
-                    //Only displays the HTML inside of these curly braces when a user is logged in with the Admin role
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="true">
-                            <span class="nav-label">
-                                Admin
-                                <span class="caret"></span>
-                            </span>
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a href="@Url.Action("ListUsers", "Administration")">Users</a></li>
-                            <li><a href="@Url.Action("ListRoles", "Administration")">Roles</a></li>
-                            <li>
-                                <a href="@Url.Action("Index", "Manufacturers")">Manufacturers</a>
-                            </li>
-                            <li>
-                                <a href="@Url.Action("Index", "Categories")">Categories</a>
-                            </li>
-                            <li>
-                                <a href="@Url.Action("Index", "OrderProducts")">Products in Orders</a>
-                            </li>
-                        </ul>
-                    </li>
-
-                }
-
                     <form class="d-flex">
-                        <button class="btn btn-outline-dark" type="submit">
+                        <a href="@Url.Action("Index", "ShoppingCart")" class="btn btn-outline-dark" type="submit">
                             <i class="bi-cart-fill me-1"></i>
                             Cart
-                            <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
-                        </button>
+                        </a>
                     </form>
                 </div>
             </div>
@@ -82,10 +82,15 @@
         <footer class="py-5 bg-dark">
             <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Sim Racing Shop 2023</p></div>
         </footer>
+        <!-- jQuery -->
+        <script src="~/js/jquery-3.7.1.min.js"></script>
+        <!-- AJAX -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-ajax-unobtrusive/3.2.6/jquery.unobtrusive-ajax.min.js" integrity="sha512-DedNBWPF0hLGUPNbCYfj8qjlEnNE92Fqn7xd3Sscfu7ipy7Zu33unHdugqRD3c4Vj7/yLv+slqZhMls/4Oc7Zg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
+        <script src="~/js/scripts.js"></script>
 
         @await RenderSectionAsync("Scripts", false)
 
