added filtering and paging to tiledproducts view using datatables.net. Fixed product create/edit controller actions to include ProductImage.

--- a/StoreFront.UI.MVC/Views/Categories/Index.cshtml
+++ b/StoreFront.UI.MVC/Views/Categories/Index.cshtml
@@ -9,7 +9,14 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
-<table class="table">
+
+<div class="row">
+    <div class="offset-3 col-md-6">
+        <div id="MessageContent" class="text-center"></div>
+    </div>
+</div>
+
+<table class="table" id="CategoriesTable">
     <thead>
         <tr>
             <th>
@@ -23,7 +30,7 @@
     </thead>
     <tbody>
 @foreach (var item in Model) {
-        <tr>
+        <tr id="Category-@item.CategoryId">
             <td>
                 @Html.DisplayFor(modelItem => item.CategoryName)
             </td>
@@ -32,10 +39,60 @@
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.CategoryId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.CategoryId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.CategoryId">Delete</a>
+                @*<a asp-action="Details" asp-route-id="@item.CategoryId">Details</a>*@
+                <button type="button"
+                        class="DetailsLink btn btn-link"
+                        id="@item.CategoryId"
+                        data-toggle="modal"
+                        data-target="#CategoryDetails">
+                    Details
+                </button> |
+                @*<a asp-action="Delete" asp-route-id="@item.CategoryId">Delete</a>*@
+                    <a data-ajax="true"
+                       data-ajax-confirm="Are you sure you want to delete @item.CategoryName"
+                       data-ajax-failure="deleteFailed"
+                       data-ajax-success="deleteConfirmed"
+                       data-ajax-method="POST"
+                       href="~/Categories/AjaxDelete/@item.CategoryId">
+                        Delete
+                    </a>
             </td>
         </tr>
 }
     </tbody>
 </table>
+
+@*Modal for AJAX Details*@
+<div class="modal fade" id="CategoryDetails" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Details</h5>
+            </div>
+            <div class="modal-body" id="DetailsBody">
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+@section Scripts {
+    <script>
+
+        //*********** AJAX DELETE ***********//
+        function deleteConfirmed(response, status, data) {
+            //Remove the Category from the Table.
+            let rowId = "#Category-" + response.id;
+            console.log(rowId);
+            $("#CategoriesTable").find(rowId).remove();
+            //Display status message
+            $("#MessageContent").html("<div class='alert alert-success'>" + response.message + "</div>");
+        }
+        function deleteFailed(response, status, data) {
+            //Display status message
+            $("#MessageContent").html("<div class='alert alert-danger'>Delete unsuccessful</div>");
+        }
+    </script>
+}
