--- a/StoreFront.UI.MVC/Views/ShoppingCart/Index.cshtml
+++ b/StoreFront.UI.MVC/Views/ShoppingCart/Index.cshtml
@@ -52,7 +52,7 @@
                                 </form>
                             </td>
                             <td>
-                                @item.Value.Product.ProductName;
+                                @item.Value.Product.ProductName
                             </td>
                             <td>
                                 @string.Format($"{@item.Value.Product.ProductPrice:c}")
