--- a/StoreFront.UI.MVC/Views/Shared/_Layout.cshtml
+++ b/StoreFront.UI.MVC/Views/Shared/_Layout.cshtml
@@ -14,6 +14,13 @@
         <link href="~/css/styles.css" rel="stylesheet" />
         <!-- Paged List -->
         <link href="~/css/PagedList.css" rel="stylesheet" />
+        <!-- Custom Styles -->
+        <link href="~/css/custom.css" rel="stylesheet" />
+        <!-- DataTables -->
+        <link href="//cdn.datatables.net/1.12.1/css/jquery.dataTables.min.css" rel="stylesheet" />
+        <!-- jQuery -->
+        <script src="~/js/jquery-3.4.1.min.js"></script>
+
     </head>
     <body>
         <!-- Navigation-->
@@ -80,13 +87,14 @@
 
         <!-- Footer-->
         <footer class="py-5 bg-dark">
-            <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Sim Racing Shop 2023</p></div>
+            <div class="container"><p class="m-0 text-center text-white">&copy; Sim Racing Shop 2023</p></div>
         </footer>
-        <!-- jQuery -->
-        <script src="~/js/jquery-3.7.1.min.js"></script>
+        
+        <!-- DataTables -->
+        <script src="//cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
         <!-- AJAX -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-ajax-unobtrusive/3.2.6/jquery.unobtrusive-ajax.min.js" integrity="sha512-DedNBWPF0hLGUPNbCYfj8qjlEnNE92Fqn7xd3Sscfu7ipy7Zu33unHdugqRD3c4Vj7/yLv+slqZhMls/4Oc7Zg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-ajax-unobtrusive/3.2.6/jquery.unobtrusive-ajax.js" integrity="sha512-f04GBpoqEZhbyjlRTuXeg8FIHDb+xfCJ0LVdqiN1fEl5B3jz3Z0SPe9IxDumOVdTeeXmKMcMJhb26VuGf1Laqw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
